--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,71 @@
-# Python
+# ── Python ────────────────────────────────────────────────────────────────────
 __pycache__/
 *.py[cod]
 *$py.class
 *.so
+*.egg
+*.egg-info/
+dist/
+build/
+*.whl
+.pytest_cache/
+htmlcov/
+.coverage
+.mypy_cache/
+.ruff_cache/
+
+# ── Virtual environments ─────────────────────────────────────────────────────
 .env
-.venv
+.venv/
 env/
 venv/
 ENV/
 env.bak/
 venv.bak/
 
-# Node
+# ── Node / Frontend ──────────────────────────────────────────────────────────
 node_modules/
-dist/
-.DS_Store
-coverage/
+.next/
+out/
+.pnp
+.pnp.js
+.yarn/install-state.gz
+*.tsbuildinfo
 
-# Logs
+# ── IDE & Editor ──────────────────────────────────────────────────────────────
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# ── OS ────────────────────────────────────────────────────────────────────────
+.DS_Store
+Thumbs.db
+Desktop.ini
+
+# ── Logs ──────────────────────────────────────────────────────────────────────
 *.log
+*.jsonl
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+backend/logs/
 
-# OS
-.DS_Store
-Thumbs.db
+# ── Generated / Runtime artifacts ─────────────────────────────────────────────
+full_log.txt
+backend/itinerary.json
+*.bak
+
+# ── Archives & binary docs (not source code) ─────────────────────────────────
+*.zip
+*.pdf
+
+# ── Stale / local-only scripts ────────────────────────────────────────────────
+backend/interactive_main.py
+
+# ── Docker ────────────────────────────────────────────────────────────────────
+.dockerignore
+
+# ── Coverage ──────────────────────────────────────────────────────────────────
+coverage/
